# ilinaia-smpp-performance

./: .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  config.example.toml
docs/: architecture.puml
src/: bind_tracker.rs  config.rs  main.rs  metrics.rs  progress.rs  worker.rs
