[package]
name = "smpp-perf"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
clap = { version = "4.5", features = ["derive"] }
owo-colors = "4.1"
rusmpp = "0.3.0-alpha.1"
rusmppc = "0.3.0-alpha.4"
serde = { version = "1.0", features = ["derive"] }
futures = "0.3"
tokio = { version = "1.41", features = ["macros", "rt-multi-thread", "signal", "time"] }
tokio-util = { version = "0.7", features = ["rt"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
dashmap = "5.5"
